--- a/index.html
+++ b/index.html
@@ -50,25 +50,30 @@
 
 					<div class="yui-gf">
 						<div class="yui-u first">
-							<h2>Skills</h2>
+							<h2>Interest</h2>
 						</div>
 						<div class="yui-u">
 
 								<div class="talent">
 									<h2>Front End</h2>
-									<p>Assertively exploit wireless initiatives rather than synergistic core competencies.	</p>
+									<!-- <p>Assertively exploit wireless initiatives rather than synergistic core competencies.	</p> -->
 								</div>
 
 								<div class="talent">
-									<h2>Interface Design</h2>
-									<p>Credibly streamline mission-critical value with multifunctional functionalities.	 </p>
+									<h2>Back end</h2>
+									<!-- <p>Credibly streamline mission-critical value with multifunctional functionalities.	 </p> -->
+								</div>
+
+								<div class="talent">
+									<h2>Game Developing</h2>
+									<!-- <p>Credibly streamline mission-critical value with multifunctional functionalities.	 </p> -->
 								</div>
 						</div>
 					</div><!--// .yui-gf -->
 
 					<div class="yui-gf">
 						<div class="yui-u first">
-							<h2>Technical</h2>
+							<h2>Technical Skills</h2>
 						</div>
 						<div class="yui-u">
 							<ul class="talent">
@@ -81,6 +86,12 @@
 								<li>Jquery</li>
 								<li>PHP</li>
 								<li class="last">Laravel</li>
+							</ul>
+
+							<ul class="talent">
+								<li>Codeigniter</li>
+								<li>Python</li>
+								<li class="last">Unity</li>
 							</ul>
 						</div>
 					</div><!--// .yui-gf-->
@@ -95,9 +106,11 @@
 
 							<div class="job last">
 								<h2>PT. Kazee Digital Indonesia</h2>
-								<h3>Internship</h3>
+								<h3>Frontend Developer Internship</h3>
 								<h4>2020-2020</h4>
-								<p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence. </p>
+								<!-- <p>Intrinsicly enable optimal core competencies through corporate relationships. 
+									Phosfluorescently implement worldwide vortals and client-focused imperatives. 
+									Conveniently initiate virtual paradigms and top-line convergence. </p> -->
 							</div>
 
 						</div><!--// .yui-u -->
