--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 						<div class="yui-u">
 
 								<div class="talent">
-									<h2>Front End</h2>
+									<h2>Front-end web development</h2>
 									<!-- <p>Assertively exploit wireless initiatives rather than synergistic core competencies.	</p> -->
 								</div>
 
 								<div class="talent">
-									<h2>Back end</h2>
+									<h2>Back-end web development</h2>
 									<!-- <p>Credibly streamline mission-critical value with multifunctional functionalities.	 </p> -->
 								</div>
 
