--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
-								Progressively evolve cross-platform ideas before impactful infomediaries. Energistically visualize tactical initiatives before cross-media catalysts for change. 
+								My name is Muhammad Luthfi Zulfikar, you can call me Luthfi. I am a hard worker who always tries to complete each assignment as well as I can within a time limit. I am open to try and learn a new things, works under pressure of time, and can work with either team or alone.
+
+I have an interest in web programming, especially using Laravel. I have a bit of knowledge using Unity, Python and java. 
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
